overflowing bug fixed

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -186,10 +186,14 @@ header {
                 cursor: pointer;
             }
         }
+
+        .enable-help-wrapper.playing {
+            visibility: hidden;
+        }
         
         .word-definition {
             width: 100%;
-            height: 100%;
+            max-height: 95px;
 
             padding: 0.5em;
 
