--- a/styles/styles.css
+++ b/styles/styles.css
@@ -157,9 +157,12 @@ header h1 {
 .information-section .word-information-wrapper .enable-help-wrapper label:hover {
   cursor: pointer;
 }
+.information-section .word-information-wrapper .enable-help-wrapper.playing {
+  visibility: hidden;
+}
 .information-section .word-information-wrapper .word-definition {
   width: 100%;
-  height: 100%;
+  max-height: 95px;
   padding: 0.5em;
   flex: auto;
   background-color: rgba(58, 61, 62, 0.8);
